# ba-tools

./: .bumpversion.cfg  .gitignore  LICENSE  Makefile  README.md  VERSION  environment.yml  environment_dev.yaml  make.cmd  meta.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: make-mkdocs.yml
arcgis/: README.md  ba-tools.aprx  ba-tools.tbx  ba_tools.pyt
ba_tools/: __init__.py  _data.py  analysis.py  data.py  enrich.py  preprocessing.py  proximity.py  transformers.py  utils.py
conda-recipe/: meta.yaml
conda_recipe/: meta.yaml
config/: config.ini
docsrc/: mkdocs.yml  requirements.txt
docsrc/mkdocs/: api.md  index.md
info/: about.json  index.json
info/recipe/: conda_build_config.yaml  meta.yaml  meta.yaml.template
notebooks/: 01-prep-raw-trips.ipynb  notebook-template.ipynb
scripts/: make_data.py  make_pyt_archive.py
src/: __init__.py  data.py  proximity.py
src/ba_tools/: __init__.py  __main__.py  _closest_multi.py  _data.py  analysis.py  proximity.py  utils.py
src/testing/: test_analysis.py  test_preprocessing.py  test_proximity.py
testing/: closest_nex.parquet  test_analysis.py  test_ba_tools.py  test_data.py  test_enrich.py  test_preprocessing.py  test_proximity.py  test_utils.py
testing/notebooks/: Untitled.ipynb  enrich.ipynb
testing/test_data/: ba-tools.aprx  ba-tools.tbx  closest_test.parquet
testing/test_data.gdb/: a00000004.freelist  a00000004.gdbtable  a00000005.CatItemTypesByUUID.atx  a00000007.CatRelTypesByDestItemTypeID.atx  a00000007.CatRelTypesByForwardLabel.atx  a00000007.gdbtable  a0000000a.gdbtablx
(+44 files in other folders)
